# pdb-redo-session-manager

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  GNUmakefile.in  README.md  changelog  configure.ac  package.json  pdb-redo-admin-schema.sql  prsmd.conf  schema.sql  upgrade-db.sql  webpack.config.js
api/html/: test-page copy.html  test-page-job.html  test-page-remote-data.html  test-page.html
api/javascript/: PDBRedoRequest.js  pdb-redo.js  test-api.html  test-api.js
api/perl/: pdb-redo.pl  test-api.pl
api/perl/lib/PDBRedo/: Api.pm
api/python/: PDBRedoAPIAuth.py  pdb-redo.py
docroot/: about.html  admin-job-result.html  admin.html  api-doc.html  db-entry.html  dialogs.html  download.html  entry-not-found.html  entry.html  error.html  footer.html  gdpr.html  head.html  index.html  job-error.html  job-overview.html  job-result.html  jobs.html  license.html  login.html  menu.html  register.html  reset-password.html  sessions.html  sponsors.html  submit.html  token-tests.html  tokens.html  why-not.html
docroot/css/: style.css
docroot/images/favicon/: browserconfig.xml
lib/PDBRedo/: Api.pm
rsrc/: reset-password-mail.txt
src/: api-controller.cpp  api-controller.hpp  data-service.cpp  data-service.hpp  https-client.cpp  prsm-db-connection.cpp  prsm-db-connection.hpp  prsmd.cpp  rama-angles.cpp  rama-angles.hpp  ramachandran.cpp  ramachandran.hpp  run-service.cpp  run-service.hpp  session-service.cpp  session-service.hpp  session.cpp  session.hpp  token-service.cpp  token-service.hpp  user-service.cpp  user-service.hpp  zip-support.hpp
test/: Api.pm  PDBRedoAPIAuth.py  README.md  pdb-redo.py  test-api-2.py  test-api.pl  test-api.py  test-api2.py  test-page.html
webapp/: admin.js  boxplot.js  custom-bootstrap-theme.scss  dialog.js  index.js  inline-entry.js  job-overview.js  jobs.js  login.js  pdb-redo-bootstrap.scss  pdb-redo-result-loader.js  pdb-redo-result.js  pdb-redo-result.scss  pdb-redo-style.scss  ramaplot.js  register.js  request.js  reset-pw.js  sessions.js  test-api.js  tokens.js  web-component-style.scss
